# aipex-quadruped-baselines

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FindGUROBI.cmake  README.md  configure.sh  convex_mpc.cpp  convex_mpc.hpp  convex_mpc.yaml  convex_mpc_publisher.cpp  convex_mpc_tuning_configs.yaml  gurobi_utils.cpp  gurobi_utils.hpp  heuristic_footstep_planner.cpp  heuristic_footstep_planner.hpp  main.cpp  mip1_c++.cpp  mpc_params.hpp  quad_params.hpp  requirements.txt  setup.sh  setup_local.sh  simplified_quad_dynamics.cpp  simplified_quad_dynamics.hpp  single_rigid_body_dynamics.cpp  single_rigid_body_dynamics.h  state_space.cpp  state_space.hpp  stepping_stone.cpp  stepping_stone.h  swing_leg_control.cpp  test.cpp  transforms.cpp  transforms.hpp
examples/: gc_funcnonlinear.cpp  qp_test.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/convex_mpc/lib/convex_mpc/: convex_mpc_controller
install/convex_mpc/share/ament_index/resource_index/package_run_dependencies/: convex_mpc
install/convex_mpc/share/ament_index/resource_index/parent_prefix_path/: convex_mpc
install/convex_mpc/share/convex_mpc/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/convex_mpc/share/convex_mpc/cmake/: convex_mpcConfig-version.cmake  convex_mpcConfig.cmake
install/convex_mpc/share/convex_mpc/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
nl_mpc_controller/: nl_mpc.cpp
scripts/: manipulator_dynamics.py
src/convex_mpc/: CMakeLists.txt  GRF_ANALYSIS.md  package.xml  parse_grf_logs.py  unitree_go
src/convex_mpc/config/: convex_mpc_params.yaml
src/convex_mpc/include/convex_mpc/: convex_mpc.hpp  convex_mpc_node.hpp  gait_planner.hpp  gurobi_utils.hpp  mpc_params.hpp  quad_params.hpp  simplified_quad_dynamics.hpp  state_indices.hpp  swing_trajectory.hpp  trajectory_utils.hpp  transforms.hpp
src/convex_mpc/launch/: convex_mpc_launch.py
src/convex_mpc/src/: convex_mpc.cpp  convex_mpc_node.cpp  convex_mpc_publisher.cpp  gait_planner.cpp  gurobi_utils.cpp  simplified_quad_dynamics.cpp  state_space.cpp  swing_trajectory.cpp  transforms.cpp
src/swing_leg/: leg_ik.hpp  plot.py  swing_trajectory.hpp  swing_trajectory_demo.cpp  trajectory.csv
swing_leg/: README.md  gait_planner.cpp  swing_manager.hpp  swing_trajectory.cpp  swing_trajectory_from_planner.hpp
temp/: .gitmodules  __CMakeLists.txt  heuristic_footstep_planner.cpp  heuristic_footstep_planner.hpp  plane.cpp  plane.h  stepping_stone.h
tests/: eigen_to_GRB_test.cpp
